# Beacon

./: .gitignore  .gitmodules  Cargo.toml  README.md  THIRD-PARTY.md
crates/beacon/: Cargo.toml
crates/beacon-config/: Cargo.toml
crates/beacon-config/src/: lib.rs
crates/beacon-emu/: Cargo.toml
crates/beacon-emu/src/: lib.rs
crates/beacon-mcp/: Cargo.toml
crates/beacon-mcp/src/: lib.rs
crates/beacon-output/: Cargo.toml
crates/beacon-output/examples/: speak.rs
crates/beacon-output/src/: lib.rs  sink.rs
crates/beacon-plugin/: Cargo.toml
crates/beacon-plugin/src/: canvas.rs  lib.rs  lua.rs
crates/beacon-plugin/tests/: alttp.rs
crates/beacon/src/: action.rs  alttp.rs  app.rs  audio.rs  beacons.rs  config_modal.rs  image.rs  input.rs  main.rs  mcp.rs  session.rs  state.rs
crates/bsnes-sys/: Cargo.toml  build.rs
crates/bsnes-sys/csrc/: shim.cpp  shim.h
crates/bsnes-sys/src/: lib.rs
docs/: README.md  design.md  plugins.md
docs/decisions/: 0001-snes-only-scope.md  0002-embed-bsnes-jg-directly.md  0003-rust-host-and-cpp-shim.md  0004-plugin-model-toml-profile-plus-lua.md  0005-event-arbitration-in-host.md  0006-sonify-timing-speak-content.md  0007-speech-backends.md  0008-braille-as-separate-sink.md  0009-gplv3.md  0010-defer-emulator-hook-patch.md  0011-community-driven-iteration.md  0012-determinism-and-replay.md  0013-delivery-and-packaging.md  0014-everything-configurable-at-runtime.md  0015-plugin-runtime.md  0016-dynamic-keybinding-and-actions.md  0017-plugin-debug-drawing.md  0018-mcp-debug-server.md  0019-scan-nearest-first.md  0020-rom-access-and-game-text.md  0021-spatial-audio-beacons.md  README.md
plugins/: README.md
plugins/alttp/: alttp.lua  alttp.toml
scripts/: capture_map.py  mcp_smoke.py
