[package]
name = "beacon"
description = "An accessible SNES emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beacon-emu.workspace = true
beacon-output.workspace = true
beacon-config.workspace = true
beacon-plugin.workspace = true
winit = "0.30"
softbuffer = "0.4"
cpal = "0.18"
gilrs = "0.11"
